Test #2 de configuration mémoire pour le plug-in Maven qui exécute les TU (plug-in Surefire), suite à des échecs de build sous Hudson lors de l'exécution des TU avec du java.lang.OutOfMemoryError: GC overhead limit exceeded
svn path=/java/trunk/; revision=3463