@@ -543,7 +543,7 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-               <argLine>-Xmx640m</argLine>
+               <argLine>-Xmx700m -XX:MaxPermSize=700m</argLine>
             </configuration>
          </plugin>
 
